# MedVision

./: .env.example  .gitignore  MedVision Frontend Design Specification.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  app.py  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/api/: __init__.py  health_api.py
backend/auth/: __init__.py  dependencies.py  jwt_manager.py  password_hasher.py
backend/client/: __init__.py  clinical_synthesis_client.py  document_ocr_client.py  embedding_client.py  lab_llm_extractor.py  lab_text_parser.py  ml_model_loader.py  ocr_extractor.py  openai_client.py  redis_client.py  storage_client.py  triage_llm_client.py  vector_store_client.py  xray_inference_client.py
backend/config/: __init__.py  settings_manager.py  triage_roadmap.py
backend/constants/: triage_policy.py
backend/controller/: __init__.py  audit_controller.py  auth_controller.py  clinical_controller.py  stats_controller.py
backend/core/: __init__.py  app_factory.py  base_controller.py  base_dao.py  base_service.py  request_context.py  singleton.py
backend/dao/: __init__.py  audit_log_dao.py  consult_dao.py  document_dao.py  encounter_dao.py  refresh_token_dao.py  stats_dao.py  (+2 more)
docs/: MedVision_FRD.md  MedVision_PRD.md  OPERATOR_SETUP_GUIDE.md  PROJECT_OVERVIEW.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: backfill_imaging_regions.py  check_ocr_setup.ps1  quality_gate.ps1  seed_database.py  verify_pg_tables.py
(+236 files in other folders)
