[project]
name = "medvision"
version = "1.0.0"
description = "MedVision Clinical AI Platform"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["B008", "UP042", "N818"]

[tool.ruff.lint.per-file-ignores]
"backend/migrations/*" = ["E501"]
"backend/tests/*" = ["N802", "E402"]
"backend/db/seed_data.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"
